@@ -4,8 +4,7 @@ include ..\Makefile.inc
 EFLAGS = -I .. -pz ..
 
 OUTDIR = ..
-SOURCES = $(wildcard *.erl)
-BEAMS = $(addprefix $(OUTDIR)/,$(SOURCES:.erl=.beam))
+BEAMS = ..\ejabberd_zlib.beam
 
 SOURCE = ejabberd_zlib_drv.c
 OBJECT = ejabberd_zlib_drv.o
