@@ -4,8 +4,7 @@ include ..\Makefile.inc
 EFLAGS = -I .. -pz ..
 
 OUTDIR = ..
-SOURCES = $(wildcard *.erl)
-BEAMS = $(addprefix $(OUTDIR)/,$(SOURCES:.erl=.beam))
+BEAMS = ..\iconv.beam ..\mod_irc.beam ..\mod_irc_connection.beam
 
 SOURCE = iconv_erl.c
 OBJECT = iconv_erl.o
