@@ -4,8 +4,7 @@ include ..\Makefile.inc
 EFLAGS = -I .. -pz ..
 
 OUTDIR = ..
-SOURCES = $(wildcard *.erl)
-BEAMS = $(addprefix $(OUTDIR)/,$(SOURCES:.erl=.beam))
+BEAMS = ..\mod_proxy65.beam ..\mod_proxy65_lib.beam ..\mod_proxy65_service.beam ..\mod_proxy65_sm.beam ..\mod_proxy65_stream.beam
 
 ALL : $(BEAMS)
 
@@ -19,7 +18,7 @@ $(OUTDIR)\mod_proxy65_service.beam : mod_proxy65_service.erl
 	erlc -W $(EFLAGS) -o $(OUTDIR) mod_proxy65_service.erl
 
 $(OUTDIR)\mod_proxy65_sm.beam : mod_proxy65_sm.erl
-	erlc -W $(EFLAGS) -o $(OUTDIR) mod_mod_proxy65_sm.erl
+	erlc -W $(EFLAGS) -o $(OUTDIR) mod_proxy65_sm.erl
 
 $(OUTDIR)\mod_proxy65_stream.beam : mod_proxy65_stream.erl
 	erlc -W $(EFLAGS) -o $(OUTDIR) mod_proxy65_stream.erl
