@@ -4,8 +4,7 @@ include ..\Makefile.inc
 EFLAGS = -I .. -pz ..
 
 OUTDIR = ..
-SOURCES = $(wildcard *.erl)
-BEAMS = $(addprefix $(OUTDIR)/,$(SOURCES:.erl=.beam))
+BEAMS = ..\stringprep.beam ..\stringprep_sup.beam
 
 SOURCE = stringprep_drv.c
 AUXIL  = uni_data.c uni_norm.c
