@@ -4,8 +4,7 @@ include ..\Makefile.inc
 EFLAGS = -I .. -pz ..
 
 OUTDIR = ..
-SOURCES = $(wildcard *.erl)
-BEAMS = $(addprefix $(OUTDIR)/,$(SOURCES:.erl=.beam))
+BEAMS = ..\tls.beam
 
 SOURCE = tls_drv.c
 OBJECT = tls_drv.o
