@@ -4,8 +4,7 @@ include ..\Makefile.inc
 EFLAGS = -I .. -pz ..
 
 OUTDIR = ..
-SOURCES = $(wildcard *.erl)
-BEAMS = $(addprefix $(OUTDIR)/,$(SOURCES:.erl=.beam))
+BEAMS = ..\ejabberd_http.beam ..\ejabberd_http_bind.beam ..\ejabberd_http_poll.beam ..\ejabberd_web.beam ..\ejabberd_web_admin.beam ..\mod_http_bind.beam ..\mod_http_fileserver.beam
 
 ALL : $(BEAMS)
 
@@ -21,5 +20,14 @@ $(OUTDIR)\ejabberd_web.beam : ejabberd_web.erl
 $(OUTDIR)\ejabberd_web_admin.beam : ejabberd_web_admin.erl
 	erlc -W $(EFLAGS) -o $(OUTDIR) ejabberd_web_admin.erl
 
+$(OUTDIR)\ejabberd_http_bind.beam : ejabberd_http_bind.erl
+	erlc -W $(EFLAGS) -o $(OUTDIR) ejabberd_http_bind.erl
+
 $(OUTDIR)\ejabberd_http_poll.beam : ejabberd_http_poll.erl
 	erlc -W $(EFLAGS) -o $(OUTDIR) ejabberd_http_poll.erl
+
+$(OUTDIR)\mod_http_bind.beam : mod_http_bind.erl
+	erlc -W $(EFLAGS) -o $(OUTDIR) mod_http_bind.erl
+
+$(OUTDIR)\mod_http_fileserver.beam : mod_http_fileserver.erl
+	erlc -W $(EFLAGS) -o $(OUTDIR) mod_http_fileserver.erl
